@@ -185,3 +185,4 @@ QPDFObjectHandle prepend page contents 0
 QPDFObjectHandle append page contents 0
 QPDF_Stream getRawStreamData 0
 QPDF_Stream getStreamData 0
+QPDF_Stream expand filter abbreviation 0
